# RustyASG

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.ru.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: cnn_classifier.rs  linear_regression.rs  mnist.rs  pattern_recognition.rs  transformer_classifier.rs  xor.rs
src/: gui_viewer.rs  lib.rs  losses.rs  main.rs  tensor.rs
src/analysis/: mod.rs  shape_inference.rs
src/asg/: mod.rs
src/autograd/: mod.rs
src/data/: dataloader.rs  dataset.rs  mod.rs  sampler.rs  transforms.rs
src/metrics/: classification.rs  mod.rs  regression.rs  running.rs
src/nn/: activations.rs  attention.rs  batchnorm.rs  conv.rs  dropout.rs  embedding.rs  feedforward.rs  init.rs  linear.rs  mod.rs  module.rs  norm.rs  pooling.rs  positional.rs  transformer.rs
src/optimizers/: mod.rs
src/runtime/: backend.rs  cpu_backend.rs  interpreter.rs  mod.rs  wgpu_backend.rs
src/serialization/: checkpoint.rs  mod.rs  safetensors_io.rs
tests/: gpu_backend.rs  grad_check.rs
