[package]
name = "rustyasg"
version = "0.2.0"
edition = "2021"
authors = ["Xzdes"]
description = "A deep learning framework in Rust, focusing on an Abstract Semantic Graph (ASG) for autograd and Transformer architectures."
readme = "README.md"
repository = "https://github.com/Xzdes/RustyAsg"
license = "MIT"
keywords = ["deep-learning", "machine-learning", "autograd", "neural-network", "wgpu"]
categories = ["science", "computer-vision"]

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.9.2"
ndarray-rand = "0.15.0"
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

wgpu = "0.19"
pollster = "0.4.0"
bytemuck = { version = "1.12", features = ["derive"] }
futures-intrusive = "0.5.0"

eframe = "0.29.0"
clap = { version = "4.5.11", features = ["derive"] }
petgraph = "0.8.2"


[dev-dependencies]
approx = "0.5.1"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "linear_regression"
path = "examples/linear_regression.rs"