[package]
name = "rustyasg"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["Xzdes"]
description = "Graph-based deep learning framework in Rust: define-then-run ASG, graph-to-graph autograd, wgpu GPU backend, and an interactive egui graph visualizer."
documentation = "https://docs.rs/rustyasg"
readme = "README.md"
repository = "https://github.com/Xzdes/RustyAsg"
homepage = "https://github.com/Xzdes/RustyAsg"
license = "MIT"
keywords = ["deep-learning", "machine-learning", "autograd", "neural-network", "wgpu"]
categories = ["science", "mathematics", "graphics"]
exclude = [
    # Keep the published crate small: strip assets and dev-only artifacts.
    "logo.png",
    "target/*",
    ".github/*",
    "*.log",
]

[lib]
# Library is the primary target; docs.rs builds this.
name = "rustyasg"
path = "src/lib.rs"

[[bin]]
# Demo binary (TransformerBlock training with optional GUI).
name = "rustyasg"
path = "src/main.rs"

[package.metadata.docs.rs]
# Build docs with all features and show "available on ..." badges for cfgs.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.9.2"
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# GPU backend.
wgpu = "0.19"
pollster = "0.4.0"
bytemuck = { version = "1.12", features = ["derive"] }
futures-intrusive = "0.5.0"

# Binary-only dependencies (clap for CLI, eframe for the visualizer,
# petgraph for layered graph layout). These still pull in for `cargo check`
# but users of the library API don't pay runtime cost for them.
eframe = "0.29.0"
clap = { version = "4.5.11", features = ["derive"] }
petgraph = "0.8.2"

[dev-dependencies]
approx = "0.5.1"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "linear_regression"
path = "examples/linear_regression.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "pattern_recognition"
path = "examples/pattern_recognition.rs"

[[example]]
name = "transformer_classifier"
path = "examples/transformer_classifier.rs"

[[example]]
name = "cnn_classifier"
path = "examples/cnn_classifier.rs"

# Release profile tuned for numerical code: full optimisation, LTO thin, one
# codegen unit for better inlining, strip debug symbols.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
